--- a/styles.css
+++ b/styles.css
@@ -136,3 +136,21 @@ a{
   color: white;
   background-color: #66BFBF;
 }
+
+/* New styles for experience page */
+.experience-container {
+  margin: 20px auto;
+  width: 80%;
+  text-align: left;
+}
+
+.experience-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.experience-list li {
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 10px;
+  color: #333;
+}
