--- a/style.css
+++ b/style.css
@@ -61,3 +61,12 @@ section.bg-white p {
 }
 
 /* ... additional styles ... */
+}
+/* This is for the resume button */
+text-decoration: none;
+        border: 0.2px solid #000;
+        color: #000;
+        background: #e6e4e4;
+        padding: 5px;
+        border-radius: 1px;
+      }
