--- a/style.css
+++ b/style.css
@@ -61,9 +61,9 @@ section.bg-white p {
 }
 
 /* ... additional styles ... */
-}
+
 /* This is for the resume button */
-.Bios {text-decoration: none;
+.btn {text-decoration: none;
         border: 0.2px solid #000;
         color: #000;
         background: #e6e4e4;
